kubernetes/core/longhorn/post/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress-pb4162-dev
  namespace: longhorn-system
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik@kubernetescrd
spec:
  rules:
  - host: longhorn.${ROOT_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
